[package]
name = "glsp-proc-macros2"
version = "0.1.0"
authors = []
publish = false
edition = "2018"

[lib]
proc-macro = true

[dependencies]
glsp = { package = "glsp-engine", path = "../glsp-engine", version = "0.*", features = ["compiler"] }
glsp-proc-macros = { path = "../glsp-proc-macros", version = "0.*"  }
glsp-stdlib = { path = "../glsp-stdlib", version = "0.*"  }
syn = "1"
proc-macro2 = "1"
quote = "1"
