[package]
name = "glsp-proc-macros2"
version = "0.1.0"
authors = ["The GameLisp Project Developers"]
edition = "2018"
description = "Implementation detail for the glsp crate"
readme = "README.md"
homepage = "https://gamelisp.rs/"
repository = "https://github.com/fleabitdev/glsp/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
glsp = { package = "glsp-engine", path = "../glsp-engine", version = "0.*", features = ["compiler"] }
glsp-proc-macros = { path = "../glsp-proc-macros", version = "0.*"  }
glsp-stdlib = { path = "../glsp-stdlib", version = "0.*"  }
syn = "1"
proc-macro2 = "1"
quote = "1"
