[package]
name = "glsp-stdlib"
version = "0.1.0"
authors = []
edition = "2018"
description = "Implementation detail for the glsp crate"
readme = "README.md"
homepage = "https://gamelisp.rs/"
repository = "https://github.com/fleabitdev/glsp/"
license = "MIT OR Apache-2.0"

[dependencies]
glsp = { package = "glsp-engine", path = "../glsp-engine", version = "0.*" }
glsp-proc-macros = { path = "../glsp-proc-macros", version = "0.*" }
smallvec = { version = "1", features = ["union", "write"] }
