[package]
name = "glsp"
version = "0.2.0"
authors = ["The GameLisp Project Developers"]
description = "The GameLisp scripting language"
readme = "README.md"
homepage = "https://gamelisp.rs/"
repository = "https://github.com/fleabitdev/glsp/"
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["compiler", "serde"]

[features]
default = []
unsafe-internals = ["glsp-engine/unsafe-internals"]
serde = ["glsp-engine/serde"]
compiler = ["glsp-engine/compiler", "glsp-proc-macros2"]
#regex = ["glsp-engine/regex"]
#regex-perf = ["glsp-engine/regex-perf"]
#regex-unicode = ["glsp-engine/regex-unicode"]

[dependencies]
glsp-engine = { path = "../glsp-engine", version = "0.2" }
glsp-proc-macros = { path = "../glsp-proc-macros", version = "0.2" }
glsp-stdlib = { path = "../glsp-stdlib", version = "0.2" }
glsp-proc-macros2 = { path = "../glsp-proc-macros2", version = "0.2", optional = true }
