[package]
name = "glsp-playground"
version = "0.2.0"
authors = []
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
glsp = { path = "../../glsp" }
js-sys = "0.3"
smallvec = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
